--- a/MovieApp/Base.lproj/Main.storyboard
+++ b/MovieApp/Base.lproj/Main.storyboard
@@ -95,72 +95,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GCX-j6-Yx0">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCX-j6-Yx0">
                                 <rect key="frame" x="0.0" y="148" width="381.66666666666669" height="548"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" restorationIdentifier="movieimage" translatesAutoresizingMaskIntoConstraints="NO" id="caI-Ki-KQt">
-                                        <rect key="frame" x="5" y="20" width="383" height="250"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="movieimage" image="movieImage" translatesAutoresizingMaskIntoConstraints="NO" id="caI-Ki-KQt">
+                                        <rect key="frame" x="0.0" y="20" width="380" height="200"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="248" id="jCx-Mm-xre"/>
+                                            <constraint firstAttribute="width" constant="380" id="Dw5-D4-RdB"/>
+                                            <constraint firstAttribute="height" constant="200" id="HRA-yC-4n1"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Genres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14N-hK-ftJ">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Genres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14N-hK-ftJ">
                                         <rect key="frame" x="5" y="318" width="76.666666666666671" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="n1V-dP-gg7"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" restorationIdentifier="moviegenre" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sk-Ra-WN9">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="moviegenre" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sk-Ra-WN9">
                                         <rect key="frame" x="5" y="347" width="205" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="Jfa-CB-YMH"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYY-gW-g1q">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYY-gW-g1q">
                                         <rect key="frame" x="5" y="376" width="39" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="Bq1-Lo-eQ9"/>
-                                            <constraint firstAttribute="width" constant="39" id="I3l-G1-b5k"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" restorationIdentifier="moviedates" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMw-Qs-gyj">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="moviedates" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMw-Qs-gyj">
                                         <rect key="frame" x="5" y="405" width="218" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="OmB-h5-s1S"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZw-bL-csE">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZw-bL-csE">
                                         <rect key="frame" x="5" y="421" width="76.666666666666671" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="Phc-G4-iWV"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="movieoverview" text="Label" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tEY-H2-uol">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="movieoverview" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tEY-H2-uol">
                                         <rect key="frame" x="0.0" y="445" width="381.66666666666669" height="100"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="sX7-h9-I8r"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="movietitle" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TNt-GP-n4F">
-                                        <rect key="frame" x="5" y="287" width="371.66666666666669" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="movietitle" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TNt-GP-n4F">
+                                        <rect key="frame" x="5" y="227" width="371.66666666666669" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -168,42 +158,14 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="wZw-bL-csE" firstAttribute="top" secondItem="dYY-gW-g1q" secondAttribute="bottom" constant="8" symbolic="YES" id="00a-3w-bnL"/>
-                                    <constraint firstItem="7sk-Ra-WN9" firstAttribute="top" secondItem="14N-hK-ftJ" secondAttribute="bottom" constant="8" symbolic="YES" id="0xx-Cz-u8q"/>
-                                    <constraint firstItem="wZw-bL-csE" firstAttribute="trailing" secondItem="14N-hK-ftJ" secondAttribute="trailing" id="1tp-21-bOl"/>
-                                    <constraint firstItem="TNt-GP-n4F" firstAttribute="top" secondItem="caI-Ki-KQt" secondAttribute="bottom" constant="10" id="3V0-Y6-xa0"/>
-                                    <constraint firstAttribute="bottom" secondItem="dYY-gW-g1q" secondAttribute="bottom" constant="154" id="CBh-Cd-821"/>
-                                    <constraint firstItem="caI-Ki-KQt" firstAttribute="leading" secondItem="7sk-Ra-WN9" secondAttribute="leading" id="DRk-A2-Dxi"/>
-                                    <constraint firstItem="caI-Ki-KQt" firstAttribute="leading" secondItem="IMw-Qs-gyj" secondAttribute="leading" id="IUr-oC-E34"/>
-                                    <constraint firstItem="tEY-H2-uol" firstAttribute="leading" secondItem="GCX-j6-Yx0" secondAttribute="leading" id="K9W-sf-dMT"/>
-                                    <constraint firstItem="IMw-Qs-gyj" firstAttribute="trailing" secondItem="tEY-H2-uol" secondAttribute="trailing" id="Kcd-Wy-pdk"/>
-                                    <constraint firstItem="14N-hK-ftJ" firstAttribute="top" secondItem="caI-Ki-KQt" secondAttribute="bottom" constant="60" id="LLy-aA-lhj"/>
-                                    <constraint firstAttribute="trailing" secondItem="7sk-Ra-WN9" secondAttribute="trailing" constant="300" id="MdA-py-TJe"/>
-                                    <constraint firstAttribute="trailing" secondItem="14N-hK-ftJ" secondAttribute="trailing" constant="300" id="R7j-7H-Q1D"/>
-                                    <constraint firstItem="tEY-H2-uol" firstAttribute="top" secondItem="wZw-bL-csE" secondAttribute="bottom" constant="5" id="Ro1-CH-ZJB"/>
-                                    <constraint firstItem="tEY-H2-uol" firstAttribute="top" secondItem="wZw-bL-csE" secondAttribute="bottom" constant="3" id="V19-Ti-sov"/>
-                                    <constraint firstItem="wZw-bL-csE" firstAttribute="leading" secondItem="IMw-Qs-gyj" secondAttribute="leading" id="VDL-DY-EBp"/>
-                                    <constraint firstItem="dYY-gW-g1q" firstAttribute="top" secondItem="7sk-Ra-WN9" secondAttribute="bottom" constant="5" id="WVb-ly-cO4"/>
-                                    <constraint firstItem="caI-Ki-KQt" firstAttribute="centerX" secondItem="GCX-j6-Yx0" secondAttribute="centerX" id="Xdc-Da-H5z"/>
-                                    <constraint firstItem="wZw-bL-csE" firstAttribute="leading" secondItem="dYY-gW-g1q" secondAttribute="leading" id="YhL-Ss-4db"/>
-                                    <constraint firstAttribute="trailing" secondItem="TNt-GP-n4F" secondAttribute="trailing" constant="5" id="cEn-sG-IzY"/>
-                                    <constraint firstAttribute="trailing" secondItem="tEY-H2-uol" secondAttribute="trailing" id="hhI-wQ-k5p"/>
-                                    <constraint firstItem="caI-Ki-KQt" firstAttribute="centerX" secondItem="TNt-GP-n4F" secondAttribute="centerX" id="qjh-Ys-kGP"/>
-                                    <constraint firstItem="wZw-bL-csE" firstAttribute="top" secondItem="IMw-Qs-gyj" secondAttribute="bottom" constant="2" id="r3z-qX-pHF"/>
-                                    <constraint firstItem="14N-hK-ftJ" firstAttribute="leading" secondItem="dYY-gW-g1q" secondAttribute="leading" id="r8R-Kr-fh4"/>
-                                    <constraint firstItem="TNt-GP-n4F" firstAttribute="leading" secondItem="GCX-j6-Yx0" secondAttribute="leading" constant="5" id="tou-GT-nU4"/>
-                                    <constraint firstItem="dYY-gW-g1q" firstAttribute="leading" secondItem="GCX-j6-Yx0" secondAttribute="leading" constant="5" id="xeX-cA-5xf"/>
-                                    <constraint firstAttribute="bottom" secondItem="tEY-H2-uol" secondAttribute="bottom" constant="3" id="z4T-4v-1QU"/>
+                                    <constraint firstAttribute="trailing" secondItem="caI-Ki-KQt" secondAttribute="trailing" id="2Zs-Sy-QxE"/>
+                                    <constraint firstItem="caI-Ki-KQt" firstAttribute="leading" secondItem="GCX-j6-Yx0" secondAttribute="leading" id="u9i-ah-5Dp"/>
+                                    <constraint firstItem="caI-Ki-KQt" firstAttribute="top" secondItem="GCX-j6-Yx0" secondAttribute="top" constant="20" symbolic="YES" id="yW9-i9-b4o"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pno-ei-iOM"/>
                         <color key="backgroundColor" systemColor="systemPinkColor"/>
-                        <constraints>
-                            <constraint firstItem="GCX-j6-Yx0" firstAttribute="top" secondItem="pno-ei-iOM" secondAttribute="top" constant="104" id="bie-je-3zm"/>
-                            <constraint firstItem="GCX-j6-Yx0" firstAttribute="leading" secondItem="ZG1-j7-hk3" secondAttribute="leading" id="eMr-q0-27T"/>
-                            <constraint firstItem="GCX-j6-Yx0" firstAttribute="centerY" secondItem="ZG1-j7-hk3" secondAttribute="centerY" id="myb-Na-tFe"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="movieDate" destination="IMw-Qs-gyj" id="pOD-zy-uaH"/>
@@ -219,6 +181,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="movieImage" width="126.66666412353516" height="190"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
